--- a/src/app/components/kimirina/kimirina.component.css
+++ b/src/app/components/kimirina/kimirina.component.css
@@ -6,13 +6,23 @@ html,body {
   max-width: 700px;
 }
 .hero-body .title {
-  color: hsl(192,17%,99%) !important;
+  color: rgb(0, 0, 0) !important;
 }
 .hero-body .subtitle {
-  color: hsl(192,17%,99%) !important;
+  color: rgb(102, 102, 102) !important;
   padding-top: 2rem;
   line-height: 1.5;
 }
+
+.title2 {
+  color: rgb(255, 255, 255) !important;
+}
+.subtitle2 {
+  color: rgb(247, 236, 236) !important;
+  padding-top: 2rem;
+  line-height: 1.5;
+}
+
 .features {
   padding: 5rem 0;
 }
@@ -64,11 +74,20 @@ transition: all .2s ease-in-out;
 .is-shady:hover {
 box-shadow: 0 10px 16px rgba(0, 0, 0, .13), 0 6px 6px rgba(0, 0, 0, .19);
 }
-/*adds font awesome stars*/
-footer li:before {
-  content: '\f1b2';
-  font-family: 'FontAwesome';
-  float: left;
-  margin-left: -1.5em;
-  color: #ff8a80;
+
+.imagen {
+  background: url(../../../assets/img/baner_principal.webp);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+
+.imagen-lazo {
+  background: url(../../../assets/img/lgbt.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
