--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,25 +1,7 @@
 <body>
   <section class="hero is-info is-medium is-bold">
     <div class="hero-head">
-      <nav>
-        <div class="nav-wrapper">
-          <a [routerLink]="['/kimirina']" class="brand-logo">Kimirina App</a>
-          <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a [routerLink]="['/kimirina']">Inicio</a></li>
-            <li><a href="#">Quienes somos?</a></li>
-            <li><a [routerLink]="['/register']">Registrate</a></li>
-            <li><a [routerLink]="['/login']" style="margin-right: 5px;">Inicia Sesión</a></li>
-          </ul>
-        </div>
-      </nav>
-    
-      <ul class="sidenav" id="mobile-demo">
-        <li><a [routerLink]="['/kimirina']">Inicio</a></li>
-        <li><a href="#">Quienes somos?</a></li>
-        <li><a [routerLink]="['/register']">Registrate</a></li>
-        <li><a [routerLink]="['/login']">Inicia Sesión</a></li>
-      </ul>
+      <app-navbar></app-navbar>
     </div>
   </section>
     
