--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,9 +10,9 @@
         <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Nuestras redes:</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3"><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a></li>
-              <li><a class="grey-text text-lighten-3"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
-              <li><a class="grey-text text-lighten-3"><i class="fa fa-twitter" aria-hidden="true"></i>Twiter</a></li>
+              <li><a class="grey-text text-lighten-3"><img src="../../../assets/icons/facebook-icon.png" class="icon"> Facebook</a></li>
+              <li><a class="grey-text text-lighten-3"><img src="../../../assets/icons/instagram-icon.png" class="icon"> Instagram</a></li>
+              <li><a class="grey-text text-lighten-3"><img src="../../../assets/icons/twitter-icon.png" class="icon"> Twiter</a></li>
             </ul>
           </div>
     </div>
