--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,7 +1,16 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-  <h1 class="title is-2">Lista de usuarios</h1>
+  <div class="row">
+    <div class="col s12 m7 l7">
+      <h1 class="title is-2">Lista de usuarios</h1>
+    </div>
+    <div class="input-field col s12 m5 l5" style="margin-top: 35px;">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix" name="filtertext" type="text" [(ngModel)]="filtertext">
+        <label for="icon_prefix">Busqueda</label>
+    </div>
+  </div>
   <div class="row">
     <div class="col s8 m11 l11">
       <a class="waves-effect waves-light btn deep-orange lighten-1" style="margin-left: 5px;" [routerLink]="['/home']"><i class="material-icons left">arrow_back</i>Regresar</a>
@@ -14,21 +23,22 @@
 
 
   <div class="content">
-
+    <div class="row">
+    </div>
   <table class="responsive-table highlight">
       <thead>
         <tr>
           <th>Nº</th>
           <th>Nombre</th>
           <th>Correo</th>
-          <th>Edad</th>
+          <th>Fecha de nacimiento</th>
           <th>Género</th>
           <th>Rol</th>
           <th>Operaciones</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let usuario of usuarioService.usuarios | paginate: {itemsPerPage: 10, currentPage: paginaActual}; index as i">
+        <tr *ngFor="let usuario of usuarioService.usuarios | filtertable:filtertext | paginate: {itemsPerPage: 10, currentPage: currentPage}; index as i">
           <th>{{i+1}}</th>
           <td>{{usuario.nombre}}</td>
           <td>{{usuario.correo}}</td>
