correccion de validacion y imagen en login

--- a/src/app/shared/login/login.component.css
+++ b/src/app/shared/login/login.component.css
@@ -24,8 +24,16 @@ body {
   -ms-flex-align: center;
   align-items: center;
   padding-top: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 150px;
   background-color: #f5f5f5;
+}
+
+.bg {
+   background-image: url("../../../assets/images/background/login-register.jpg");
+   height: 100%; 
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
 }
 
 .form-signin {
