--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -7,7 +7,9 @@
     </div>
 </div>
 <br>
-<table class="table table-responsive table-dark">
+
+<div class="content">
+<table class="table table-dark">
     <thead>
       <tr>
         <th scope="col">Nº</th>
@@ -33,7 +35,8 @@
         </td>
       </tr>
     </tbody>
-  </table>
+</table>
+</div>
 
   <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="userService.users.length"></ngb-pagination>
 
